@@ -69,8 +69,10 @@ public:
 
   virtual std::ostream& print(std::ostream& o, const char* first, const char* sep, const char* last) const;
   virtual std::ostream& printWithoutPrefix(std::ostream& o, const char* first, const char* sep, const char* last) const;
+  virtual std::ostream& printAsNumber(std::ostream& o, const char* first, const char* sep, const char* last) const;
   virtual std::ostream& print(std::ostream& o) const;
   virtual std::ostream& printWithoutPrefix(std::ostream& o) const;
+  virtual std::ostream& printAsNumber(std::ostream& o) const;
   virtual std::ostream& printAsFacts(std::ostream& o) const;
 
   void add(const Interpretation& other);
